Added validations to user insertion with its roles. Code smell improved.